--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,20 @@ body{
     background-image: url(Img/Emo\ Emma.png);
     background-size: cover;
     background-position: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#title{
+    display: inline-block;
+    padding: 8px;
+    border-radius: 10px;
+    font-size: 44px;
+    background-color: white;
+    margin: 0%;
+    text-transform: uppercase;
 }
 
 .pair2{
@@ -25,9 +39,15 @@ body{
 }
 
 .pair3{
+    background-image: url(/Img/friends.png);
+    background-size: cover;
+    background-position: center;
 
 }
 
 .textContainer{
     min-height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
